--Created offers component and added routing to it. --Introduced CSS Bootstrap library --Fixed UI (horiz/vert center alignments) for forms

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,10 +2,7 @@ body{
    font-family: 'Muli';
    color:white;
 }
-::placeholder{
-    font-family: 'Muli';
-}
-#loginFormDiv {
+#container{
     background: url('../assets/login.jpg') no-repeat center center fixed;
     background-size: cover;
     position: fixed; 
@@ -15,16 +12,27 @@ body{
     min-width: 100%;
     min-height: 100%;
 }
-#loginFormDiv form{
+::placeholder{
+    font-family: 'Muli';
+}
+/* #loginFormDiv {
+
+} */
+/* #loginFormDiv form{
 
     border: 3px solid red;
     position: absolute;
     top: 50%;
     left: 50%;
-}
-input{
+} */
+/* input{
     width:100%;
     height: 40px;
-    border: 1px;
-    color: #df4297;
+    border: 1px; 
+} */
+button{
+    background-color: #df4297;
 }
+/* .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #8064A2 !important;
+} */
